# UnholyGrounds

./: .ccls.sh  .gitignore  CMakeLists.txt  Makefile  Makefile.macOS  README.md  find
.ccls-cache/@@home@ern1e@Documents@aulas@fcg@INF01047-assignment/: @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@GLFW@glfw3.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@assert.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@dlfcn.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@local_lim.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@sched.h.blob  (+235 more)
data/: player.mtl  tardis.mtl
include/: Model.h  matrices.h  model.h  utils.h
src/: .main.cpp.swp  IndexBuffer.cpp  IndexBuffer.h  Model.cpp  Model.h  ObjModel.cpp  ObjModel.h  Renderer.cpp  Renderer.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp  model.cpp  shader_fragment.glsl  shader_vertex.glsl
(+518 files in other folders)
